<resources>
    <string name="app_name">Pass_Generator</string>
    <string name="titulo">Pass Generator</string>
    <string name="numero">Numbers</string>
    <string name="letras">Characters</string>
    <string name="complexa">Complex</string>
    <string name="hint">Type the length of the password...</string>
    <string name="boton">Generate Password</string>
    <string name="toast">You must introduce the password length first</string>
    <string name="toast_gardar">You must generate the password first</string>
    <string name="toast_gardar_def">You forgot to type the name of the service</string>
    <string name="toast_existe">That service already exists</string>
    <string name="toast_correcto">Success</string>
    <string name="gardar">Save</string>
    <string name="titSegAct">Type the name of the service...</string>
    <string name="atras">Back</string>
    <string name="xestionar">Manage Passwords</string>
    <string name="servicio">Service</string>
    <string name="contrasinal">Password</string>
    <string name="borrar">Delete</string>
    <string name="alerta">Warning!</string>
    <string name="mensaxe">Are you sure you want to delete it? This action can not be undone.</string>
    <string name="si">Yes</string>
    <string name="non">No</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="editar">Edit</string>
    <string name="pass_nova">Type a new password</string>
    <string name="elixe">Choose a new password...</string>
    <string name="atencion">Pay Attention!</string>
    <string name="hint_primeiro">Type here your password...</string>
    <string name="primeiroMensaxe">\nHere you have to introduce a password. This will be your Super User password. It is the only one that you have to remember, but it is important that you do not forget it, otherwise you will have no access to your stored passwords. If you do not introduce any password the default one will be \'abc123.\'.\n</string>
    <string name="acceso">In order to access this section you must introduce the Super User password.</string>
    <string name="incorrecto">The password you typed is not correct</string>
    <string name="salir">Exit</string>
    <string name="need_pass">Password!!!</string>
    <string name="compartir">Share with...</string>
    <string name="hint_usuario">Type your user name...</string>
    <string name="falta_usuario">You forgot to introduce the user name</string>
    <string name="falta_servicio">You forgot to introduce the name of the service</string>
    <string name="vibracion">Vibration</string>
    <string name="avtivar_vibracion">Enable/Disable vibration</string>
    <string name="axustex_xerais">Main settings</string>
    <string name="settings">Settings</string>
    <string name="usuario">User</string>
    <string name="cambiar_pass">Change Password</string>
    <string name="password">Password</string>
    <string name="nova_pass">Please type a new Super User password</string>
    <string name="pass_service">Choose a new password for this Service</string>
    <string name="max_length">Maximum length is 25</string>
    <string name="colormenu">Theme colour</string>
    <string name="select_colour">Select a colour</string>
    <string name="passVella">Type your password...</string>
    <string name="passNova">New Password</string>
    <string name="cambiada">Password changed</string>
    <string name="noncambiada">Unable to change the password</string>
    <string name="novo_usuario">Type the new user name...</string>
    <string name="cambiar_datos">Change data</string>
    <string name="limite_fallos">You missed 3 times, everything has been deleted</string>
    <string name="imposible_gardar">Imposible to save it in here</string>

    <string-array name="cores">
        <item>Rojo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Amarillo</item>
        <item>Naranja</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>


</resources>
