<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="passgenerator.myapplication.Fragment_Password"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/flotanteOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idPassVella"
            android:hint="@string/passVella"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passNova"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/flotanteNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idPassNova"
            android:hint="@string/pass_nova"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idCancelar"
            android:text="@string/cancelar"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idAceptar"
            android:text="@string/aceptar"/>

    </LinearLayout>

</LinearLayout>
