<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="passgenerator.myapplication.MostrarDatos">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:text="@string/servicio"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:typeface="sans" />

        <TextView
            android:id="@+id/idTextoServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:text="@string/usuario"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:typeface="sans" />

        <TextView
            android:id="@+id/idTextoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:text="@string/contrasinal"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:typeface="sans" />

        <TextView
            android:id="@+id/idTextoContrasinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />

        <Button
            android:id="@+id/idBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_botones"
            android:gravity="center"
            android:shadowColor="#1B29A8"
            android:text="@string/borrar"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/idEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_botones"
            android:gravity="center"
            android:shadowColor="#1B29A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/editar"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/idBtnAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_botones"
            android:gravity="center"
            android:shadowColor="#1B29A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/atras"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>
