<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="passgenerator.myapplication.Fragment"
    android:orientation="vertical">

        <TextView
            android:id="@+id/mostrarTexto"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/primeiroMensaxe"
            android:gravity="fill_horizontal"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/flotanteLonxitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_primeiro"
                    android:textColorHint="@color/negro"
                    android:textColor="@color/negro"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonPecharDialogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTexto"
            android:layout_gravity="center"
            android:text="@string/aceptar" />

</LinearLayout>
