<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="passgenerator.myapplication.Gardar_Datos">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:shadowDx="1"
                    android:shadowDy="2"
                    android:shadowRadius="1.5"
                    android:text="@string/servicio"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:typeface="sans" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/flotanteServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/idNomeServ"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:capitalize="words"
                        android:hint="@string/titSegAct" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:shadowDx="1"
                    android:shadowDy="2"
                    android:shadowRadius="1.5"
                    android:text="@string/usuario"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:typeface="sans" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/flotanteUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/idNomeUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_usuario" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:shadowDx="1"
                    android:shadowDy="2"
                    android:shadowRadius="1.5"
                    android:text="@string/password"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/idPassDef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/idGardarDef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_botones"
            android:gravity="center"
            android:text="@string/gardar"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/idAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_botones"
            android:gravity="center"
            android:text="@string/atras"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>
